Bug 432772 - Browser window does not show a web page, but only the source code when using QWebEngine
Summary: Browser window does not show a web page, but only the source code when using ...
Status: RESOLVED FIXED
Alias: None
Product: alkimia
Classification: Frameworks and Libraries
Component: General (other bugs)
Version First Reported In: master
Platform: Other All
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-02-10 22:38 UTC by Ralf Habacker
Modified: 2022-03-24 13:49 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 8.1.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2021-02-10 22:38:44 UTC
SUMMARY


STEPS TO REPRODUCE
1. build and install onlinequoteseditor5 with QWebEngine enabled
2. start onlinequoteseditor5
3. check a present online quote source

OBSERVED RESULT
The browser windows shows the source of the web page

EXPECTED RESULT
The browser should show the web page, not the page source

SOFTWARE/OS VERSIONS
Linux: openSUSE_Leap 15.1 
KDE Frameworks Version: 5.55.0
Qt Version: 5.9.4
Comment 1 Ralf Habacker 2022-03-24 13:49:18 UTC
Git commit 881aa0511d4aeedfbf74f24992721e7d33843f67 by Ralf Habacker.
Committed on 24/03/2022 at 13:49.
Pushed by habacker into branch '8.1'.

Fix bug not showing web page when using BUILD_WITH_WEBENGINE=1
FIXED-IN:8.1.1

M  +5    -0    src/alkwebpage.cpp
M  +1    -0    src/alkwebpage.h

https://invent.kde.org/office/alkimia/commit/881aa0511d4aeedfbf74f24992721e7d33843f67