Fix bug not showing web page when using BUILD_WITH_WEBENGINE=1

BUG:432772
FIXED-IN:8.1.1